// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nx-plugin > should NOT add config targets dynamically if the project is configured 1`] = `
{
  "code-pushup": {
    "configurations": {},
    "executor": "@code-pushup/nx-plugin:cli",
    "options": {
      "config": "libs/my-lib/code-pushup.config.ts",
      "persist": {
        "outputDir": "libs/my-lib/.code-pushup",
      },
      "progress": false,
      "verbose": false,
    },
    "outputs": [
      "{options.persist.outputDir}/report.md",
      "{options.persist.outputDir}/report.json",
    ],
    "parallelism": true,
  },
}
`;

exports[`nx-plugin > should add configuration target dynamically 1`] = `
{
  "code-pushup--configuration": {
    "configurations": {},
    "executor": "nx:run-commands",
    "options": {
      "command": "nx g @code-pushup/nx-plugin:configuration --project="my-lib"",
    },
    "parallelism": true,
  },
}
`;

exports[`nx-plugin > should add executor target dynamically if the project is configured 1`] = `
{
  "code-pushup": {
    "configurations": {},
    "executor": "@code-pushup/nx-plugin:cli",
    "options": {
      "config": "libs/my-lib/code-pushup.config.ts",
      "persist": {
        "outputDir": "libs/my-lib/.code-pushup",
      },
      "progress": false,
      "verbose": false,
    },
    "outputs": [
      "{options.persist.outputDir}/report.*",
    ],
    "parallelism": true,
  },
}
`;

exports[`nx-plugin > should add executor target dynamically if the project is configured 2`] = `
{
  "code-pushup": {
    "configurations": {},
    "executor": "@code-pushup/nx-plugin:cli",
    "options": {
      "config": "libs/my-lib/code-pushup.config.ts",
      "persist": {
        "outputDir": "libs/my-lib/.code-pushup",
      },
      "progress": false,
      "verbose": false,
    },
    "outputs": [
      "{options.persist.outputDir}/report.md",
      "{options.persist.outputDir}/report.json",
    ],
    "parallelism": true,
  },
}
`;

exports[`nx-plugin > should execute dynamic configuration target 1`] = `
"import type { CoreConfig } from '@code-pushup/models';

// see: https://github.com/code-pushup/cli/blob/main/packages/models/docs/models-reference.md#coreconfig
export default {
  plugins: [],
} satisfies CoreConfig;
"
`;
